# life-dashboard

./: README.md  pyproject.toml
life_dash/: __init__.py  app.css  app.py
life_dash/widgets/: __init__.py  clock.py
